tests/test164.rael.exp
Error [2:12]: Block expected
|     with -2
|            ^
