tests/test164.rael
match -2 {
    with -2